# Gideon

./: .gitignore  Gideon.cabal  README.md  stack.yaml
app/: Main.hs
scripts/: genAllSolarSystems.sh
src/: Auth.hs  CREST.hs  Constant.hs  Database.hs  EveTypes.hs  IDIndex.hs  Manufacture.hs  MarketUtil.hs  SDEDrill.hs  Terminal.hs  Thera.hs  TypeIDSearch.hs  Types.hs  Util.hs  XML.hs  test
src/CREST/: Character.hs  Map.hs  Market.hs
src/EveTypes/: Blueprints.hs
src/XML/: Character.hs  Eve.hs  Server.hs
test/: Spec.hs
