name:                Gideon
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Frefreak/Gideon#readme
license:             BSD3
license-file:        LICENSE
author:              Xiangyu Zhu
maintainer:          frefreak.zxy@gmail.com
copyright:           Copyright Xiangyu Zhu (c) 2016
category:            Abstract
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Constant
                     , Database
                     , Util
                     , Types
                     , Auth
                     , CREST
                     , CREST.Character
                     , CREST.Market
                     , CREST.Map
                     , EveTypes
                     , XML
                     , XML.Character
                     , XML.Server
                     , XML.Eve
                     , MarketUtil
                     , SDEDrill
                     , Terminal
                     , Thera
                     , Manufacture
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , unix
                     , process
                     , filepath
                     , servant-server
                     , warp
                     , mtl
                     , wreq
                     , bytestring
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , random
                     , lens
                     , aeson
                     , lens-aeson
                     , text
                     , scientific
                     , yaml
                     , http-client
                     , http-client-tls
                     , connection
                     , data-default
                     , unordered-containers
                     , pcre-heavy
                     , pcre-light
                     , xml-conduit
                     , vector
                     , containers
                     , async
                     , lifted-async
                     , ansi-terminal
                     , SafeSemaphore
                     , aeson-pretty
  default-language:    Haskell2010

executable Gideon
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Gideon
  default-language:    Haskell2010

test-suite Gideon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Gideon
                     , QuickCheck
                     , hspec
                     , mtl
                     , bytestring
                     , wreq
                     , lens
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Frefreak/Gideon
